corpus/select.txt

==================
Simple select
==================

SELECT * FROM my_table

---

(program
 (statement
  (select_statement
   (select
    (keyword_select)
    (select_expression))
   (from
    (keyword_from)
     (table_expression (table_name))))))

==================
Simple from schema name qualifier
==================

SELECT * FROM my_schema.my_table

---

(program
 (statement
  (select_statement
   (select
    (keyword_select)
    (select_expression))
   (from
    (keyword_from)
     (table_expression
      (schema_name) (table_name))))))

==================
Simple select with distinct
==================

SELECT DISTINCT * FROM my_table

---

(program
 (statement
  (select_statement
   (select
    (keyword_select)
    (keyword_distinct)
    (select_expression))
   (from
    (keyword_from)
     (table_expression (table_name))))))

==================
Simple select with distinct
==================

SELECT ALL * FROM my_table

---

(program
 (statement
  (select_statement
   (select
    (keyword_select)
    (keyword_all)
    (select_expression))
   (from
    (keyword_from)
     (table_expression (table_name))))))


==================
Simple select with where and equal expression
==================

SELECT * FROM my_table WHERE x = 10

---

(program
 (statement
  (select_statement
   (select
    (keyword_select)
    (select_expression))
   (from
    (keyword_from)
     (table_expression (table_name))
   )
   (where (keyword_where)
    (expression
      (binary_expression
        (expression (primary_expression))
        (expression (primary_expression (number_literal)))
      )
    )
  ))))


==================
Simple expression without FROM
==================


SELECT 10

---

(program
 (statement
  (select_statement
   (select
    (keyword_select)
    (select_expression
      (select_item (expression (primary_expression (number_literal))))
    )))))
